SERVER-65317 `TaskExecutorCursor` should not cancel prefetching getMores